# INHA_ParallelProgramming_002

./: CMakeLists.txt  main.cpp
Final_Practice/CUDA_Examples/: hello_world.cu  plain_dtw.cu  plain_dtw.ipynb  shared_covariance_kernel.cu  thread_id.cu
Final_Practice/CUDA_Practice/: README.md  dtw_naive_kernel.ipynb  naive_covariance_matrix.cu  symmetric_covariance_matrix.cu
Final_Practice/OpenMP_Practice/: README.md  all_vs_all-accuracy.cpp  all_vs_all-atomic.cpp  all_vs_all-critical.cpp  all_vs_all-reduction-best.cpp  all_vs_all.cpp  custom-parallel-reduction-ex1.cpp  custom-parallel-reduction-ex2.cpp  custom-parallel-reduction-ex3.cpp  custom-parallel-reduction-ex4.cpp  hello_omp.cpp  lastprivate  lastprivate.cpp  master-pragma-omp-for  master-pragma-omp-for.cpp  omp_get_max-num_threads  omp_get_max-num_threads.cpp  omp_practice_3.cpp  parallel_block-wise_reduction.cpp  run_omp.sh
Final_Practice/OpenMP_Practice/실전문제/: openmp-test-ex1.cpp  openmp-test-ex2.cpp  openmp-test-ex3.cpp  openmp-test-ex4.cpp  openmp-test-ex5.cpp  openmp-test-ex6.cpp  openmp-test-ex7.cpp  openmp-test-ex8.cpp
HW1/: 12210795_김준호_HW1.ipynb  gemm_navie.cpp  gemm_transepose-and-multiply.cpp  matmul.cpp  matmul_avx.cpp  matmul_opt.cpp  parallel_prefix_sum_navie.cpp
HW2/: 12210795_김준호_HW2.ipynb
Midterm_Practice/: matmul_1.cpp  matmul_2.cpp  matmul_avx_1.cpp  matmul_opt_2.cpp  parallel_prefix_pram_cost-optimal.cpp  parallel_prefix_pram_naive.cpp
midterm-practice/: matmul.cpp  matmul_avx.cpp  matmul_opt.cpp  matmul_opt_1.cpp  vector_normalization_on_soa.cpp
